<resources>
    <string name="app_name">Desired Vacations</string>
    <string name="no_vacations">No vacations</string>
    <string name="vacation">Vacation</string>
    <string name="name">Name</string>
    <string name="hotel_name">Hotel name (Optional)</string>
    <string name="location">Location</string>
    <string name="necessary_money_amount">Necessary money (Optional)</string>
    <string name="description">Description (Optional)</string>
    <string name="choose_image">Choose image</string>
    <string name="add_vacation">Add Vacation</string>
    <string name="vacation_add_success">Vacation was created</string>
    <string name="vacation_add_fail">Vacation couldn\'t be created</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="vacation_delete_confirm_msg">Are you sure you want do delete this vacation?</string>
    <string name="delete">Delete</string>
    <string name="vacation_delete_success_msg">Vacation was deleted</string>
    <string name="vacation_delete_fail_msg">Vacation couldn\'t be deleted</string>
    <string name="image">image</string>
    <string name="date">Date</string>
    <string name="change_image">Change image</string>
    <string name="remove_image">Remove image</string>
    <string name="icon">icon</string>
    <string name="more">More</string>
    <string name="edit">Edit</string>
    <string name="vacation_edit_success">Vacation was updated</string>
    <string name="vacation_edit_fail">Vacation couldn\'t be updated</string>
    <string name="save_changes">Save changes</string>
    <string name="show_reminders_for_this_vacation">Show reminders for this vacation</string>
    <string name="vacation_reminder_7_days">Your vacation is 7 days away</string>
    <string name="vacation_reminder_tomorrow">Your vacation starts tomorrow</string>
    <string name="vacation_reminder_today">Your vacation starts today</string>
    <string name="vacation_reminder_started">Your vacation has started!</string>
    <string name="will_show_reminders">Will show reminders</string>
    <string name="image_not_resolved">Image couldn\'t be resolved</string>
</resources>