<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/footer"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/required_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@color/background"
                    android:contentDescription="@string/image"
                    android:src="@drawable/default_image"
                    app:layout_constraintDimensionRatio="16:9"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_max="500dp" />

                <TextView
                    android:id="@+id/name"
                    style="@style/h4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="15dp"
                    android:ellipsize="end"
                    android:lines="1"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/image" />

                <LinearLayout
                    android:id="@+id/location_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@id/name"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/icon"
                        android:src="@drawable/ic_location"
                        app:tint="@color/white" />

                    <TextView
                        android:id="@+id/location"
                        style="@style/p"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:ellipsize="end"
                        android:lines="1"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/date_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/location_layout"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/icon"
                        android:src="@drawable/ic_date"
                        app:tint="@color/white" />

                    <TextView
                        android:id="@+id/date"
                        style="@style/p"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:ellipsize="end"
                        android:lines="1"
                        android:textColor="@color/white" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/optional_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/required_layout"
                app:layout_constraintVertical_bias="0">

                <LinearLayout
                    android:id="@+id/hotel_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/icon"
                        android:src="@drawable/ic_hotel" />

                    <TextView
                        android:id="@+id/hotel_name"
                        style="@style/p"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:ellipsize="end"
                        android:lines="1"
                        android:textColor="?colorControlNormal" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/necessary_money_amount_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@id/hotel_name_layout"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/icon"
                        android:src="@drawable/ic_money" />

                    <TextView
                        android:id="@+id/necessary_money_amount"
                        style="@style/p"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:ellipsize="end"
                        android:lines="1"
                        android:textColor="?colorControlNormal" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/description_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/necessary_money_amount_layout">

                    <TextView
                        style="@style/p_bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:ellipsize="end"
                        android:lines="1"
                        android:text="@string/more" />

                    <TextView
                        android:id="@+id/description"
                        style="@style/p"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:textColor="?colorControlNormal" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>